# g_polymatroid-flexibility

./: .gitignore  ALGORITHM_VERIFICATION.md  COLUMN_GENERATION_COMPLETE_GUIDE.md  CYTHON_GUIDE.md  CYTHON_README.md  GENERALDER_VS_CORRECTTCL_COMPARISON.md  OPTIMIZATION_SUMMARY.md  PARALLELIZATION_GUIDE.md  README.md  VERTEX_DISAGGREGATION_IMPLEMENTATION.md  build_cython.py  functions_IABVG.py  lstm_evaluation_results.csv  output_file.xlsx  pyproject.toml  quick_integration_test.py  read.ipynb  run_quick_comparison.py  test_dual_objectives.py  test_integration_gurobi.py  安装步骤.md
flexitroid-benchmark/: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.py  test_script.py
flexitroid-benchmark/benchmarks/: benchmark.py  exact.py  general_affine.py  homothet.py  z_raw.py  zonotope.py
flexitroid-benchmark/flexitroid/: flexitroid.py
flexitroid-benchmark/flexitroid/aggregations/: aggregator.py  e1s_aggregator.py  pv_aggregator.py  v1g_aggregator.py
flexitroid-benchmark/flexitroid/cython/: __init__.py  b_fast.py  p_fast.py  setup.py
flexitroid-benchmark/flexitroid/devices/: general_der.py  level1.py  level2.py  pv.py  tcl.py  tcl28.py  tcl29.py  tcl_dev.py
flexitroid-benchmark/flexitroid/problems/: l_inf.py  linear.py  quadratic.py  signal_tracker.py
flexitroid-benchmark/flexitroid/utils/: cost.py  device_sampling.py  elexon_api.py  plotting.py  population_generator.py  utils.py
flexitroid-benchmark/papers/TOSG/numerical_results/scripts/: CaseStudy.py  CompTimevsDevice.py  CompTimevsN.py  CompTimevsT.py  plot_formatting.py
flexitroid-benchmark/papers/TOSG/tikz/: tikz_picture.tex
flexitroid-benchmark/papers/TOSG/tikz/figures/: paramodular_fig1.tex  paramodular_fig2.tex  paramodular_fig3.tex  (+4 more)
flexitroid-benchmark/tests/: test_aggregations.py  test_devices.py  test_flexitroid.py  test_optimisation.py
(+81 files in other folders)
