[tool.poetry]
name = "flexitroid"
version = "0.1.0"
description = "A repository for aggregating flexibility in populations of distributed energy resources (DERs)."
authors = ["Karan Mukhi <karan.mukhi@cs.ox.ac.uk>"]
license = "MIT License"
readme = "README.md"
packages = [
    {include = "flexitroid", from = "."},
    {include = "benchmarks", from = "."}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"  # Updated Python version requirement
numpy = "^2.2"
cvxpy = "^1.6.0"
gurobipy = "^12.0.1"
cython = "^3.0.12"
setuptools = "^75.8.0"
scikit-learn = "^1.6.1"
requests = "^2.32.3"
plotly = "^6.0.1"
nbformat = "^5.10.4"
pycddlib = "2.1.7"
ecos = "^2.0.14"
scipy = "^1.15.2"
networkx = "^3.4.2"
pymaxflow = "^1.3.2"
apricot-select = "^0.6.1"
polytope = "^0.2.5"
matplotlib = "^3.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
